hands_on_ex05 commit 6

--- a/hands_on_ex/hands_on_ex05/hands_on_ex05.qmd
+++ b/hands_on_ex/hands_on_ex05/hands_on_ex05.qmd
@@ -189,9 +189,7 @@ pairs(wine[,2:12],
 
 ```{r}
 #| eval: false
-ggstatsplot::ggcorrmat(
-  data = wine, 
-  cor.vars = 1:11)
+ggstatsplot::ggcorrmat(data = wine, cor.vars = 1:11)
 ```
 
 ```{r}
